# kinect-forge

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  README.md  gui  install  lint  pyproject.toml  setup  test  uninstall  update
.github/workflows/: ci.yml  package.yml
config/: presets.json
docs/: ARCHITECTURE.md  CALIBRATION.md  CAPTURE_WORKFLOW.md  CONFIG.md  GUI.md  PACKAGING.md  RECONSTRUCTION.md  ROADMAP.md  SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: include.sh  install.sh  install_udev_rules.sh  lint.sh  package.ps1  package.sh  pyinstaller.spec  run_gui.sh  setup.sh  test.sh  test_kinect.py  test_kinect.sh  uninstall.sh  update.sh
src/kinect_forge/: __init__.py  __main__.py  calibration.py  capture.py  cli.py  config.py  dataset.py  export.py  gui.py  measure.py  presets.py  reconstruct.py  turntable.py  viewer.py
src/kinect_forge/sensors/: __init__.py  base.py  freenect_v1.py
tests/: test_dataset.py  test_reconstruct.py
